# librhub

./: .env.example  README.md  package-lock.json  pyproject.toml
alembic/: env.py
alembic/versions/: be582912f6b0_initial_commit.py  d2debbefd4d6_add_post_voted_notification_type.py
app/: main.py
app/api/: dependencies.py
app/api/v1/endpoints/: auth.py  bookmarks.py  categories.py  comments.py  follows.py  media.py  moderation.py  notifications.py  posts.py  professions.py  revisions.py  search.py  tags.py  (+2 more)
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  base.py  bookmarks.py  category.py  comments.py  enums.py  follows.py  media.py  moderation.py  notifications.py  post.py  post_media.py  post_tag.py  profession.py  revisions.py  tags.py  user.py  users.py  usersession.py  votes.py
app/schemas/: auth.py  bookmark.py  category.py  comment.py  follow.py  media.py  moderation.py  notification.py  post.py  profession.py  revision.py  tag.py  user.py  vote.py
app/services/: notifications.py
app/tasks/: scheduler.py
frontend/: .gitignore  components.json  next.config.ts  package-lock.json  package.json  prettier.config.cjs  tailwind.config.mjs
frontend/locales/en/: hero.json
frontend/locales/ru/: hero.json
frontend/locales/uz/: hero.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ThemeToggle.tsx
frontend/src/config/: app.yaml  index.ts  yaml.ts
frontend/src/context/: ThemeContext.tsx
frontend/src/hooks/: index.ts  useDidMount.ts
frontend/src/i18n/: request.ts  routing.ts
(+15 files in other folders)
