[project]
name = "librhub"
version = "0.1.0"
description = "Blog and content sharing platform for developers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.8",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.47",
    "uvicorn>=0.40.0",
]
